UI: Reconnect network page imporoved. Fixes #862. Center aligned the text and added a table to make points look better.Div tags are changed to button tag and mobile comptaibility added.

--- a/app/renderer/css/network.css
+++ b/app/renderer/css/network.css
@@ -1,32 +1,67 @@
+
 html,
 body {
     margin: 0;
     cursor: default;
     font-size: 14px;
-    color: rgba(51, 51, 51, 1.000);
-    background: rgba(255, 255, 255, 1.000);
     user-select: none;
+    position: relative;
+    min-height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+ul {
+    text-align: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style-type: none;
+    text-align: center;
+    background: rgb(255, 255, 255);
+    height: 40px;
+    line-height: 40px;
+    color: rgb(102, 102, 102);
+}
+
+li:nth-child(2n) {
+    background: rgb(247, 247, 247);
+}
+
+li:hover span {
+    width: 40px;
+    opacity: 1.0;
+}
+
+#buttons {
+    margin: auto;
+    margin-top: 20px;
 }
 
 #content {
     display: flex;
     flex-direction: column;
     font-family: "Trebuchet MS", Helvetica, sans-serif;
-    margin: 100px 200px;
     text-align: center;
 }
 
 #title {
-    text-align: left;
+    text-align: center;
     font-size: 24px;
     font-weight: bold;
-    margin: 20px 0;
 }
 
 #subtitle {
     font-size: 20px;
-    text-align: left;
+    text-align: center;
     margin: 12px 0;
+    font-weight: bold;
+    color: rgb(102, 102, 102);
 }
 
 #description {
@@ -49,11 +84,50 @@ body {
     color: rgba(255, 255, 255, 1.000);
     width: 96px;
     height: 32px;
-    border-radius: 5px;
-    line-height: 32px;
+    border-radius: 7px;
     cursor: pointer;
 }
 
 .button:hover {
     opacity: 0.8;
+}
+
+.container {
+    text-align: center;
+    position: relative;
+}
+
+.maingraphic {
+    position: relative;
+    margin-bottom: 60px;
+}
+
+.cog {
+    margin-top: 50px;
+    width: 10rem;
+    height: 10rem;
+    animation: coganimation 10s infinite;
+    fill: rgba(0, 150, 136, 1.000);
+    margin-left: 60px;
+}
+
+.spanner {
+    margin-top: 60px;
+    position: absolute;
+    transform: rotate(20deg);
+    top: 10%;
+    margin-left: 30px;
+    left: 25%;
+    width: 10rem;
+    height: 10rem;
+    fill: rgba(0, 150, 136, 1.000);
+}
+
+@keyframes coganimation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
